--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,21 @@
-# Docling - Procesamiento avanzado de documentos
-docling>=1.0.0
-docling-core>=1.0.0
-docling-ibm-models>=1.0.0
-docling-parse>=1.0.0
-
-# Dependencias adicionales con versiones compatibles
-pypdfium2>=4.0.0
-pillow>=9.0.0
-numpy>=1.21.0,<2.0.0
-
-# Para crear PDFs de prueba
-reportlab>=3.6.0
-
-# OpenCV compatible con NumPy 1.x
-opencv-python-headless>=4.8.0,<4.12.0
-
 # Para el worker de procesamiento
 Flask>=2.0.0
+
+# --- Nuevo Stack de Procesamiento de PDFs ---
+# Extracción de texto, imágenes y tablas de PDFs
+PyMuPDF>=1.23.0
+camelot-py[cv]>=0.11.0
+
+# Motor de OCR
+pytesseract>=0.3.10
+
+# Manipulación de imágenes (dependencia de pytesseract)
+Pillow>=9.0.0
+groq>=0.4.0
+
+# Análisis y manipulación de datos tabulares
+pandas>=1.3.0
+
+# Dependencias que antes eran de Docling pero pueden ser útiles
+numpy>=1.21.0,<2.0.0
+opencv-python-headless>=4.8.0,<4.12.0
