--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,6 @@ pandas>=1.3.0
 # Dependencias que antes eran de Docling pero pueden ser útiles
 numpy>=1.21.0,<2.0.0
 opencv-python-headless>=4.8.0,<4.12.0
+
+pytesseract>=0.3.10
+Pillow>=9.0.0
