--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "dotenv": "^16.3.1",
     "exceljs": "^4.3.0",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.0.0",
     "google-auth-library": "^9.0.0",
     "googleapis": "^126.0.1",
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.0",
+    "helmet": "^7.0.0",
     "node-cron": "^3.0.2",
     "pdf-parse": "^1.1.1",
     "sequelize": "^6.32.1",
